# peepshow

./: .envrc  .gitignore  404.html  LICENSE  README.md  README.rst  demo.py  demo.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  setup.sh  sitemap.xml
docs/: demo.cast  demo.yml  index.md  macros.py  peep.md  show.md
docs/source/: conf.py  index.rst
peep/: index.html
peepshow/: __init__.py  peep.py  peepshow.1  show.py
peepshow/cmds/: base.py  cmds.py
peepshow/core/: context.py  dialect.py  env.py  exceptions.py  explorer.py  goto.py  peep.py  probes.py  show.py  trans.py
peepshow/pager/: cache.py  pager.py
peepshow/utils/: magic_peep.py  python.py  system.py  terminal.py  traceback.py
samples/: sample01.py  sample02.py  sample03.py  sample99.py
search/: search_index.json
show/: index.html
tests/: test_utils_python.py
